drm/radeon: add error output if VM CS fails on cayman

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,4 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.na
+apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: "dagger.hilt.android.plugin"
+
+android {
+    compileSdkVersion 29
+  
