--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,4 +9,10 @@ apply plugin: "dagger.hilt.android.plugin"
 
 android {
     compileSdkVersion 29
-  
+    buildToolsVersion "29.0.3"
+
+    defaultConfig {
+        applicationId "hr.ferit.matijasokol.coinmarket"
+        minSdkVersion 21
+        targetSdkVersion 29
+        versionC
