--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,4 +15,13 @@ android {
         applicationId "hr.ferit.matijasokol.coinmarket"
         minSdkVersion 21
         targetSdkVersion 29
-        versionC
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles get
