--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,10 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles get
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersio
