--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Material
-    implementation "com.google.android.mat
+    implementation "com.google.android.material:material:$material_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    /
