--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    /
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$kotlin_room_version"
+
+    // Swipe to refresh layout
+    implementation "androidx.sw
