--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-    // C
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$coroutines_lifecycle_scope_version"
+    implementation "androidx.lifecycle:lifec
