--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$coroutines_lifecycle_scope_version"
 
     // Navigation Components
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_componen
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_components_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_components_version"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_versi
