--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,11 @@ dependencies {
     implementation "org.jsoup:jsoup:$jsoup_version"
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+    // Dagger Core
+    implementation "com.google.dagger:dagger:2.28"
+    kapt "com.google.dagger:dagger-compiler:2.28"
+
+    // Dagger Android
+    api 'com.goog
