--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,9 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.28"
 
     // Dagger Android
-    api 'com.goog
+    api 'com.google.dagger:dagger-android:2.23.2'
+    api 'com.google.dagger:dagger-android-support:2.23.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+
+    //Dagger - Hilt
+    impleme
