--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,4 +16,8 @@
         <activity android:name=".ui.coins.CoinsActivity"
             android:screenOrientation="portrait">
             <intent-filter>
-           
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        <
