--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
     ext.room_version = '2.2.5'
-    ext.kotlin_r
+    ext.kotlin_room_version = '2.2.5'
+    ext.retrofit_version = '2.7.0'
+    ext.material_version = '1.1.0'
+    ext.swiper_version = '1.1.0'
+    ext.lottie_version = '3.4.0'
+    ext.chart_version = 'v3.1.0'
