--- a/build.gradle
+++ b/build.gradle
@@ -9,3 +9,8 @@ buildscript {
     ext.swiper_version = '1.1.0'
     ext.lottie_version = '3.4.0'
     ext.chart_version = 'v3.1.0'
+    ext.interceptor_version = '4.5.0'
+    ext.coroutines_version = '1.3.5'
+    ext.coroutines_lifecycle_scope_version = '2.2.0'
+    ext.navigation_components_version = '2.3.0'
+    ext
