--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,10 @@ buildscript {
     ext.coroutines_version = '1.3.5'
     ext.coroutines_lifecycle_scope_version = '2.2.0'
     ext.navigation_components_version = '2.3.0'
-    ext
+    ext.glide_version= '4.11.0'
+    ext.jsoup_version= '1.10.3'
+    ext.hilt_version= '2.28-alpha'
+    ext.hilt_lifecycle_version= '1.0.0-alpha02'
+    repositories {
+        google()
+        jcenter()
