--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpat
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_components_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath "com.google.dagger:h
