Small bug fixed

--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,14 @@ buildscript {
     }
 }
 
-all
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
